@@ -2,6 +2,9 @@ Change log next version
 -----------------------
 * XmlXsdMatcher#matchesXsdInClasspath(..) now returns an instance of XmlXsdMatcher so that you easily can supply a LSResourceResolver.
 * ObjectMapperResolver looks for third party libraries in both thread context- and ObjectMapperResolver classloader.
+* It's now possible to configure the way error messages are generated in REST Assured using the com.jayway.restassured.config.MatcherConfig. For example:
+    given().config(RestAssured.config().matcherConfig(new MatcherConfig(HAMCREST))). ..
+  will generate error messages that are close to original Hamcrest messages. The other option is REST_ASSURED which uses the default error messages generated by REST Assured.
 
 Change log 2.3.3 (2014-08-29)
 ----------------------------
